--- a/styles.css
+++ b/styles.css
@@ -72,11 +72,29 @@ h1 {
 }
 
 #new-book-popup {
-    display: block;
-    position: relative;
+    background-color:antiquewhite;
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 10px 20px;
+    border-style: solid;
+    border-color:azure;
 }
 
 #new-book-form {
+    background-color:bisque;
     display: grid;
-    grid-template-rows: repeat(4, 25%);
+    grid-template-rows: repeat(6, 15%);
+    padding: 1px;
+}
+
+#new-book-form label {
+    margin: 10px 1px;
+}
+
+#new-book-form button {
+    margin: 10px 1px;
+    padding: 2px;
 }
